tests/e2e/not_allowed/asyncy.error
Error: syntax error in story at line 1, column 1

1|    async = 1
      ^^^^^

E0030: `async` is reserved for future use
